CSS del listado de productos, del detalle y retoques al ejs de vino

--- a/public/css/nosotros.css
+++ b/public/css/nosotros.css
@@ -11,6 +11,14 @@ body {
     background:  #ebebeb;;
 }
 
+header {
+    width: 100%;
+}
+
+footer {
+    width: 100%;
+}
+
 main {
     text-align: center;
 }
