--- a/src/views/vino.ejs
+++ b/src/views/vino.ejs
@@ -15,7 +15,7 @@
              <article class="producto-datos">
                  <p><b>AÑO DE COSECHA:</b> Abril 2015</p>  
                 <p><b>VARIEDADES:</b>93% Malbec de Gualtallary, 7% Petit Verdot.</p>
-                <p><b>COSECHA:</b> Manual</p>
+                <p><b>TIPO:</b> Manual</p>
             </article>
 
              <h4 class="titulo-maridaje-cata">NOTAS DE CATA</h4>
@@ -23,8 +23,6 @@
              <article class="producto-cata"> 
                  <p>Amarillo dorado, con brillantes reflejos verdosos. Muy aromatico,en la nariz se perciben aromas exuberantes a melon fresco y durazno blanco, combinados con notas de fruta tropicalm , que aparecen acompañadas por vahos citricos y florales. Su entrada en boca -levemente dulce-  es equilibrada debido a su exhaustiva crianza.
                 Blanco armonioso , distinguido, reitera la cremosidad que el roble cede a la uva dominante (Chardonnay), en su amplio volumen y en la acidez refrescante del final de boca.</p>
-             <p>Temperatura de servicio: 9º C</p>
-             <p>Potencial de guarda: 8-10 años.</p>
             </article> 
 
              <h4 class="titulo-maridaje-cata">MARIDAJE</h4>
