--- a/public/css/catalogo.css
+++ b/public/css/catalogo.css
@@ -7,6 +7,7 @@
 
 body {
     height: 100%;
+    
 }
 
 .main-content{
@@ -52,7 +53,7 @@ body {
 }
 
 .catalogo{
-    background-color: gainsboro;
+    background-color: #ebebeb;
     width: 100%;
     display: flex;
     justify-content: space-around;
