--- a/public/css/products/detail.css
+++ b/public/css/products/detail.css
@@ -8,13 +8,270 @@
 
 body {
     font-family: "Roboto";
-    background:  #ebebeb;;
-    background-color: #440217;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
+    background:  #ebebeb;
 }
 
 main {
     text-align: center;
+}
+
+img {
+    max-width: 100%;
+    max-height: 100%;
+}
+
+h2 {
+    font-size:36px;
+    color: #414141;
+    margin-top: 20px;
+}
+
+.caja-producto-principal {
+    display: flex;
+    flex-wrap: wrap;
+    margin: 5%;
+    background-color: white; 
+    justify-content: center;
+    position: relative;
+    z-index: 0;
+    
+}
+.imagen-producto{
+    padding-top: 10px;
+}
+
+.caja-texto-principal {
+    display: flex;
+    text-align: left;
+}
+.producto-nombre {
+    text-align: left;
+    margin-left: 5%;
+    margin-right: 5%;
+    border-bottom: px solid #440217;
+    padding-bottom: 10px;
+    font-size: 24px;
+    margin-bottom: 12px;
+    font-style: italic;
+}
+.producto-datos{
+    text-align: left;
+    margin-left: 5%;
+    margin-right: 5%;
+    font-size: 15px;
+    
+}
+
+.titulo-maridaje-cata {
+    border-bottom: 1.5px solid #AD9863;
+    text-align: left;
+    margin : 5% 5%;
+    padding-bottom: 10px;
+}
+
+.producto-cata {
+    text-align: left;
+    margin-left: 5%;
+    color: #383d41;
+    margin-right: 5%;
+    padding-bottom: 5%;
+
+}
+.producto-cata p{
+    margin: 3px 0px;  
+}
+
+.producto-maridaje{
+    text-align: left;
+    margin: 3% 5% 5% 5%;
+    color: #383d41;
+    border-bottom: 1.5px solid #AD9863;
+    padding-bottom: 5%;
+}
+
+.precio{
+    font-size: 26px;
+    margin-top: 500px;
+    margin-bottom: 2%;
+}
+
+.cantidades{
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: center;
+    margin-top: 2%;    
+}
+
+.seleccionar p{
+    font-size: 14px;
+    color: #383d41;
+}
+
+.mas-menos{
+    width: 30px;
+    height: 30px;
+    text-align: center;
+    justify-content: center;
+    font-size: 20px;
+    font-weight: bold;
+    background-color: #383d41;
+    padding-top: 4px;
+    color:#AD9863;
+}
+
+.mas-menos:hover {
+    box-shadow:0px 0px 10px #AD9863;
+}
+
+.mas-menos:focus {
+    background-color: #AD9863;
+    color: #383D41;
+    font-weight: bold;
+    box-shadow: none;
+}
+
+.cantidad{
+    width: 50px;
+    height: 30px;
+    text-align: center;
+    font-size: 15px;
+    padding-top: 7.5px;
+    border: 1px solid #383D41;    
+}
+
+.agregar-producto button {
+    background-color: #383D41;
+    color: #A9AAAA;
+    border: none;
+    transition: all 0.2s;
+    height: 5vh;
+    width: 35%;
+    border-radius: 5px;
+    border: 1px solid #AD9863;
+    margin: 5% 0;
+}
+
+.agregar-producto button:hover {
+    box-shadow:0px 0px 10px #AD9863;
+}
+
+.agregar-producto button:focus {
+    background-color: #AD9863;
+    color: #383D41;
+    font-weight: bold;
+    box-shadow: none;
+}
+
+.esquinero1 {
+    position: absolute;
+    width: 45px;
+    height: 45px;
+    display: block;
+    z-index: 1;
+    border-top: 1px solid #AD9863;
+    border-left: 1px solid #AD9863;
+    top: 0px;
+    left: 0px;
+}
+
+.esquinero2 {
+    position: absolute;
+    width: 45px;
+    height: 45px;
+    display: block;
+    z-index: 1;
+    border-top: 0.51px solid #AD9863;
+    border-right: 0.51px solid #AD9863;
+    top: 0px;
+    right: 0px;
+}
+
+.esquinero3 {
+    position: absolute;
+    width: 45px;
+    height: 45px;
+    display: block;
+    z-index: 1;
+    border-bottom: 1px solid #AD9863;
+    border-left: 1px solid #AD9863;
+    bottom: 0px;
+    left: 0px;
+}
+
+.esquinero4 {
+    position: absolute;
+    width: 45px;
+    height: 45px;
+    display: block;
+    z-index: 1;
+    border-bottom: 0.51px solid #AD9863;
+    border-right: 0.51px solid #AD9863;
+    bottom: 0px;
+    right: 0px;
+}
+
+
+@media (min-width: 768px) {
+    body {        
+        background-color: #440217
+    }
+    
+    .caja-producto-principal {
+        flex-wrap: nowrap;
+    }
+    .caja-textos-principal {
+        width: 66%;
+        padding-top: 5%;
+            }
+    .imagen-producto{
+        padding-top: 5%;
+
+}
+
+
+.producto-nombre {
+    
+    margin-left: 5%;
+    margin-right: 5%;
+   
+    padding-bottom: 10px;
+    
+    margin-bottom: 12px;
+    
+}
+.producto-datos{   
+    margin-left: 5%;
+    margin-right: 5%;
+}
+
+.titulo-maridaje-cata {       
+    margin : 1% 5%;
+}
+
+.producto-cata {   
+   padding-bottom: 1%;
+}
+
+.producto-maridaje{   
+    margin: 1% 5%;
+    padding-bottom: 2%;
+}
+
+.agregar-producto{
+    margin-top: 20px;
+}
+
+.agregar-producto b {
+    font-size: 20px;
+}
+
+.precio{
+     margin: 1% 0;
+}
+
+.agregar-producto button {
+ margin: 4% 0 6% 0;
+ max-width: 160px;
+}
+
 }
