--- a/src/views/products/list.ejs
+++ b/src/views/products/list.ejs
@@ -26,7 +26,7 @@
                             <a class="icono-edit" href="/products/update/<%= product.id %>">
                                 <i class= "fas fa-pen"></i>
                             </a>
-                            <form action="/products/?m=DELETE" method="post">
+                            <form action="/products/delete/<%= product.id %>" method="post">
                                 <input type="hidden" name="id" value="<%= product.id %>">
                                 <button class="boton-delete" type="submit">
                                     <i class="fas fa-trash"></i>
