--- a/public/css/products/create.css
+++ b/public/css/products/create.css
@@ -1,9 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
 *{
- margin: 0px;
- padding: 0px;
- box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Roboto';
+    font-weight: bold;
 }
 
 body {
@@ -17,4 +19,123 @@ body {
 
 main {
     text-align: center;
+    
+}
+
+main form {
+    display: flex;
+    width: 70%; 
+    margin: 3%;
+    border: solid #AD9863 1px;
+    border-radius: 4px;
+    padding: 2vh;
+    text-align: start;
+    flex-direction: column;
+    justify-content: center;
+}
+
+main input {
+    width: 90%;
+}
+
+
+main textarea {
+    width: 90%;
+}
+
+fieldset {
+    display: flex;
+    flex-direction: column;
+    border: 0px;
+}
+
+main button {
+    background-color: #414141;
+    padding: 10px 5px 10px 5px;
+    border: solid #AD9863 1px;
+    border-radius: 4px;
+    color: white;
+    letter-spacing: 1px;
+    width: 100px;
+}
+
+main button:hover {
+    box-shadow:0px 0px 10px #AD9863;
+}
+
+main button:focus {
+    background-color: #AD9863;
+    color: #383D41;
+    font-weight: bold;
+    box-shadow: none;
+}
+
+main input:hover {
+    box-shadow:0px 0px 10px #AD9863;
+}
+
+section {
+    display: flex;
+    flex-direction: row;
+}
+
+.fs-kl {
+    margin-top: 1px;
+    padding: 0px 0px 0px 10px;
+}
+
+.fs-kl label {
+    display: contents;
+    font-size: smaller;
+}
+
+.fs-kl input {
+    width:fit-content;
+    box-shadow: none;
+    margin-right: 1%;
+    align-self: flex-start;
+    justify-content: flex-start;
+    padding-top: 5px;
+}
+
+
+@media (min-width:1025px) and (min-width:1281px) {
+    ::-webkit-input-placeholder {
+       /* WebKit browsers */
+        color: transparent;
+   }
+    :-moz-placeholder {
+       /* Mozilla Firefox 4 to 18 */
+        color: transparent;
+   }
+    ::-moz-placeholder {
+       /* Mozilla Firefox 19+ */
+        color: transparent;
+   }
+    :-ms-input-placeholder {
+       /* Internet Explorer 10+ */
+        color: transparent;
+   }
+    input::placeholder {
+        color: transparent;
+   }
+    textarea::-webkit-input-placeholder {
+       /* WebKit browsers */
+        color: transparent;
+   }
+    textarea:-moz-placeholder {
+       /* Mozilla Firefox 4 to 18 */
+        color: transparent;
+   }
+    textarea::-moz-placeholder {
+       /* Mozilla Firefox 19+ */
+        color: transparent;
+   }
+    textarea:-ms-input-placeholder {
+       /* Internet Explorer 10+ */
+        color: transparent;
+   }
+    textarea::placeholder {
+        color: transparent;
+   }
 }
