--- a/public/css/products/update.css
+++ b/public/css/products/update.css
@@ -1,15 +1,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
 *{
- margin: 0px;
- padding: 0px;
- box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Roboto';
+    font-weight: bold;
 }
 
 body {
     font-family: "Roboto";
-    background:  #ebebeb;;
-    background-color: #440217;
+    background:  #ebebeb;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -17,4 +18,124 @@ body {
 
 main {
     text-align: center;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;    
+    background:  #ebebeb;    
+}
+
+form {
+    background-color: white;
+    max-width: 500px;
+}
+
+main form {
+    display: flex;
+    width: 70%; 
+    margin: 3%;
+    border: solid #AD9863 1px;
+    border-radius: 4px;
+    padding: 2vh;
+    text-align: start;
+    flex-direction: column;
+    justify-content: center;
+}
+
+main input {
+    width: 90%;
+    background-color: #ebebeb;
+    background-color: #F4F4F4;
+    box-shadow: 0px 0px 1px 1px #A9AAAA;
+    border: 0;
+    margin: 1px;
+    padding: 5px
+}
+
+
+main textarea {
+    width: 90%;
+    background-color: #ebebeb;
+    background-color: #F4F4F4;
+    box-shadow: 0px 0px 1px 1px #A9AAAA;
+    border: 0;
+    margin: 1px;
+    padding: 5px
+}
+
+main textarea:hover {
+    box-shadow:0px 0px 10px #AD9863;
+}
+
+h2 {
+    width:100%;
+    margin-top: 20px;
+}
+
+fieldset {
+    display: flex;
+    flex-direction: column;
+    border: 0px;
+    margin: 5px 0;
+}
+
+label {
+    margin-bottom:  3px;
+}
+
+main button {
+    background-color: #414141;
+    padding: 10px 5px 10px 5px;
+    border: solid #AD9863 1px;
+    border-radius: 4px;
+    color: white;
+    letter-spacing: 1px;
+    width: 100px;
+}
+
+main button:hover {
+    box-shadow:0px 0px 10px #AD9863;
+}
+
+main button:focus {
+    background-color: #AD9863;
+    color: #383D41;
+    font-weight: bold;
+    box-shadow: none;
+}
+
+main input:hover {
+    box-shadow:0px 0px 10px #AD9863;
+}
+
+section {
+    display: flex;
+    flex-direction: row;
+}
+
+.fs-kl {
+    margin-top: 1px;
+    padding: 0px 0px 0px 10px;
+}
+
+.fs-kl label {
+    display: contents;
+    font-size: smaller;
+}
+
+.fs-kl input {
+    width:fit-content;
+    box-shadow: none;
+    margin-right: 1%;
+    align-self: flex-start;
+    justify-content: flex-start;
+    padding-top: 5px;
+}
+
+
+
+
+@media (min-width: 768px) {
+ body{     
+    background-color: #440217;
+ }
 }
